--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App.Starting"
         android:usesCleartextTraffic="true"
-        tools:targetApi="33">
+        tools:targetApi="33"
+        tools:replace="android:allowBackup" >
         <activity
             android:name=".MainActivity"
             android:exported="true"
