--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,22 @@
-[{*.kt,*.kts}]
-ktlint_code_style=android_studio
-ktlint_function_naming_ignore_when_annotated_with=Composable
-exclude = **/icons/**/*
-end_of_line=lf
-indent_size=4
-indent_style=space
-insert_final_newline=true
-max_line_length=140
-ij_kotlin_allow_trailing_comma=true
-ij_kotlin_allow_trailing_comma_on_call_site=true
-ij_kotlin_imports_layout=*,java.**,javax.**,kotlin.**,^
-ij_kotlin_packages_to_use_import_on_demand=unset
+[*.{kt,kts}]
+indent_size = 4
+indent_style = space
+insert_final_newline = true
+end_of_line = lf
+max_line_length = 120
+
+ij_kotlin_allow_trailing_comma = true
+ij_kotlin_allow_trailing_comma_on_call_site = true
+ij_kotlin_imports_layout = *
+ij_kotlin_packages_to_use_import_on_demand = java.util.*,kotlinx.android.synthetic.**
+
+ktlint_code_style = android_studio
+ktlint_chain_method_rule_force_multiline_when_chain_operator_count_greater_or_equal_than = unset
+ktlint_class_signature_rule_force_multiline_when_parameter_count_greater_or_equal_than = unset
+ktlint_function_naming_ignore_when_annotated_with = Composable
+ktlint_function_signature_body_expression_wrapping = multiline
+ktlint_function_signature_rule_force_multiline_when_parameter_count_greater_or_equal_than = 3
+ktlint_ignore_back_ticked_identifier = false
+
+[**/icons/**/*.kt]
+ktlint_standard = disabled
