--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist = "0.31.6-rc"
-activity-compose = "1.8.0"
+activity-compose = "1.8.1"
 agp = "8.1.3"
 appcompat = "1.6.1"
 compose-bom = "2023.10.01"
@@ -26,7 +26,7 @@ kotlinx-serialization-json = "1.6.0"
 kotest = "5.6.2"
 ksp = "1.9.10-1.0.13"
 ktlint_compose_rules = "0.3.3"
-lifecycle = "2.7.0-beta01"
+lifecycle = "2.7.0-rc01"
 material-icons = "1.5.4"
 mockk = "1.13.5"
 okhttp = "4.11.0"
@@ -42,6 +42,7 @@ secp256k1-kmp = "0.11.0"
 spongycastle = "1.58.0.0"
 spotless = "6.22.0"
 sqlcipher-android = "4.5.3"
+telephoto = "0.7.1"
 timber = "5.0.1"
 url-detector = "0.1.23"
 
@@ -114,6 +115,8 @@ sqlcipher-android = { module = "net.zetetic:sqlcipher-android", version.ref = "s
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+telephoto-zoomable-image = { module = "me.saket.telephoto:zoomable-image", version.ref = "telephoto" }
+telephoto-zoomable-image-coil = { module = "me.saket.telephoto:zoomable-image-coil", version.ref = "telephoto" }
 
 # Other libs
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
