--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ ksp = "1.9.10-1.0.13"
 ktlint_compose_rules = "0.3.3"
 lifecycle = "2.7.0-rc01"
 material-icons = "1.5.4"
+media3-exoplayer = "1.2.0"
 mockk = "1.13.5"
 okhttp = "4.11.0"
 paging = "3.2.1"
@@ -117,6 +118,8 @@ coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 telephoto-zoomable-image = { module = "me.saket.telephoto:zoomable-image", version.ref = "telephoto" }
 telephoto-zoomable-image-coil = { module = "me.saket.telephoto:zoomable-image-coil", version.ref = "telephoto" }
+media3-exoplayer-core = { module = "androidx.media3:media3-exoplayer", version.ref = "media3-exoplayer" }
+media3-exoplayer-ui = { module = "androidx.media3:media3-ui", version.ref = "media3-exoplayer" }
 
 # Other libs
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
