--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -29,21 +29,11 @@ jobs:
         openssl base64 -d -out app/primal_alternative_android.jks <<< "${{ secrets.CERT_ALTERNATIVE }}"
         openssl base64 -d -out app/primal_googlePlay_android.jks <<< "${{ secrets.CERT_PLAYSTORE }}"
 
-    - name: Build APK
-      run: ./gradlew assembleReleaseAlternative --no-daemon
-
-    - name: Build Bundle
-      run: ./gradlew bundleReleasePlayStore --no-daemon
-
-    - name: Prepare APK artifacts
+    - name: Build & Prepare APK artifacts
       run: |
+        ./gradlew assembleReleaseAlternative --no-daemon
         mv app/build/outputs/apk/releaseAlternative/*apk primal-${{ github.ref_name }}.apk
         zip -j primal-${{ github.ref_name }}-mapping.zip app/build/outputs/mapping/releaseAlternative/mapping.txt
-
-    - name: Prepare Bundle artifacts
-      run: |
-        mv app/build/outputs/bundle/releasePlayStore/*aab primal-${{ github.ref_name }}.aab
-        cp app/build/outputs/mapping/releasePlayStore/mapping.txt app/build/outputs/bundle/releasePlayStore/primal-${{ github.ref_name }}.mapping.txt
 
     - name: Upload APK artifacts to GitHub
       uses: actions/upload-artifact@v3
@@ -53,8 +43,8 @@ jobs:
           primal-${{ github.ref_name }}.apk
           primal-${{ github.ref_name }}-mapping.zip
 
-    - name: Upload Bundle artifacts to Play Store
-      run: ./gradlew uploadReleasePlayStorePrivateBundle --artifact-dir app/build/outputs/bundle/releasePlayStore
+    - name: Build & Upload bundle to Google Play
+      run: ./gradlew publishReleasePlayStoreBundle --track alpha --release-name "${{ github.ref_name }}"
 
   release:
    name: Create GitHub release
@@ -79,5 +69,5 @@ jobs:
        name: Primal ${{ github.ref_name }}
        draft: true
        prerelease: true
-       body_path: RELEASE_NOTES.md
+       body_path: app/src/release/github/release-notes/github.md
        files: primal-${{ github.ref_name }}/*
