--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ accompanist = "0.32.0"
 activity-compose = "1.8.2"
 agp = "8.2.1"
 appcompat = "1.6.1"
+camera = "1.3.1"
 compose-bom = "2023.10.01"
 compose-lottie = "5.2.0"
 compose-navigation = "2.7.6"
@@ -33,6 +34,8 @@ mockk = "1.13.5"
 okhttp = "4.11.0"
 paging = "3.2.1"
 play-publishing = "3.8.4"
+play-billing = "6.1.0"
+qrcode-generator = "1.6.2"
 retrofit = "2.9.0"
 roboelectric = "4.10.3"
 room = "2.6.1"
@@ -46,7 +49,6 @@ sqlcipher-android = "4.5.3"
 telephoto = "0.7.1"
 timber = "5.0.1"
 url-detector = "0.1.23"
-camera = "1.3.1"
 
 [libraries]
 # Core libs
@@ -57,6 +59,10 @@ androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-p
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "material-icons" }
+
+# Play
+play-billing = { module = "com.android.billingclient:billing", version.ref = "play-billing" }
+play-billing-ktx = { module = "com.android.billingclient:billing-ktx", version.ref = "play-billing" }
 
 # UI libs
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
@@ -124,6 +130,7 @@ media3-exoplayer-ui = { module = "androidx.media3:media3-ui", version.ref = "med
 # Other libs
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 ktlint_compose_rules = { module = "io.nlopez.compose.rules:ktlint", version.ref = "ktlint_compose_rules" }
+qrcode-generator = { module = "com.github.alexzhirkevich:custom-qr-generator", version.ref = "qrcode-generator" }
 
 # Data storage libs
 datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
