--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,9 +4,9 @@ activity-compose = "1.8.2"
 agp = "8.2.2"
 appcompat = "1.6.1"
 camera = "1.3.1"
-compose-bom = "2023.10.01"
+compose-bom = "2024.02.01"
 compose-lottie = "5.2.0"
-compose-navigation = "2.7.6"
+compose-navigation = "2.7.7"
 constraintlayout = "2.1.4"
 constraintlayout-compose = "1.0.1"
 coil = "2.5.0"
@@ -28,9 +28,9 @@ kotlinx-serialization-json = "1.6.0"
 kotest = "5.6.2"
 ksp = "1.9.10-1.0.13"
 ktlint_compose_rules = "0.3.3"
-lifecycle = "2.7.0-rc02"
-material-icons = "1.5.4"
-media3-exoplayer = "1.2.0"
+lifecycle = "2.7.0"
+material-icons = "1.6.2"
+media3-exoplayer = "1.2.1"
 mockk = "1.13.5"
 okhttp = "4.12.0"
 paging = "3.2.1"
