--- a/.github/workflows/PR-workflow.yml
+++ b/.github/workflows/PR-workflow.yml
@@ -2,8 +2,7 @@ name: Build and test PR against main
 
 on:
   pull_request:
-    branches: [ $default-branch ]
-    types: [opened, synchronize]
+    branches: [main]
 
 jobs:
   build:
