--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:maxSdkVersion="32"
         tools:node="remove" />
 
+    <uses-permission
+        android:name="android.permission.READ_PHONE_STATE"
+        tools:node="remove" />
+
     <uses-feature
         android:name="android.hardware.camera.any"
         android:required="false" />
