--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ core-ktx = "1.12.0"
 core-splashscreen = "1.0.1"
 core-testing = "2.2.0"
 dagger = "2.50"
-datastore = "1.0.0"
+datastore = "1.1.0-beta02"
 detekt = "1.23.3"
 emoji2-emojipicker = "1.4.0"
 espresso-core = "3.5.1"
