Disable CI publish to GooglePlay temporarily

--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -50,8 +50,8 @@ jobs:
           primal-${{ github.ref_name }}-crash-reporter.apk
           primal-${{ github.ref_name }}-crash-reporter-mapping.zip
 
-    - name: Publish AAB to Google Play
-      run: ./gradlew publishGooglePlayReleaseBundle --track "alpha" --release-name "${{ github.ref_name }}" --stacktrace
+#    - name: Publish AAB to Google Play
+#      run: ./gradlew publishGooglePlayReleaseBundle --track "alpha" --release-name "${{ github.ref_name }}"
 
   release:
    name: Create GitHub release
