--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,22 @@
 [versions]
 accompanist = "0.32.0"
 activity-compose = "1.8.2"
-activity-ktx = "1.9.0-alpha03"
+activity-ktx = "1.9.0-rc01"
 agp = "8.3.1"
 appcompat = "1.6.1"
 bitcoinj-core = "0.16.2"
 camera = "1.3.2"
-compose-bom = "2024.02.02"
+compose-bom = "2024.04.00"
 compose-lottie = "5.2.0"
 compose-navigation = "2.7.7"
 constraintlayout = "2.1.4"
 constraintlayout-compose = "1.0.1"
-coil = "2.5.0"
+coil = "2.6.0"
 core-ktx = "1.12.0"
 core-splashscreen = "1.0.1"
 core-testing = "2.2.0"
 dagger = "2.50"
-datastore = "1.1.0-beta02"
+datastore = "1.1.0-rc01"
 detekt = "1.23.3"
 emoji2-emojipicker = "1.4.0"
 espresso-core = "3.5.1"
@@ -28,26 +28,26 @@ junit-android-runner = "1.1.5"
 ktlint-wrapper-plugin = "11.6.1"
 kotlin = "1.9.22"
 kotlinx-coroutines = "1.7.3"
-kotlinx-serialization-json = "1.6.0"
+kotlinx-serialization-json = "1.6.3"
 kotest = "5.6.2"
 ksp = "1.9.22-1.0.17"
 ktlint_compose_rules = "0.3.3"
 lifecycle = "2.7.0"
-material-icons = "1.6.3"
-media3-exoplayer = "1.3.0"
-mockk = "1.13.9"
+material-icons = "1.6.5"
+media3-exoplayer = "1.3.1"
+mockk = "1.13.10"
 okhttp = "4.12.0"
 paging = "3.2.1"
 play-publishing = "3.8.4"
 play-billing = "6.2.0"
 qrcode-generator = "1.6.2"
-retrofit = "2.9.0"
+retrofit = "2.11.0"
 roboelectric = "4.10.3"
 room = "2.6.1"
 security-app-authenticator = "1.0.0-beta01"
 security-crypto = "1.1.0-alpha06"
 security-identity-credential = "1.0.0-alpha03"
-secp256k1-kmp = "0.13.0"
+secp256k1-kmp = "0.15.0"
 spongycastle = "1.58.0.0"
 spotless = "6.25.0"
 sqlcipher-android = "4.5.3"
