--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,14 @@
 [versions]
-accompanist = "0.32.0"
+accompanist = "0.34.0"
 activity-compose = "1.8.2"
 activity-ktx = "1.9.0-rc01"
-agp = "8.3.1"
+agp = "8.3.2"
 appcompat = "1.6.1"
 bitcoinj-core = "0.16.2"
 camera = "1.3.2"
 compose-bom = "2024.04.00"
 compose-lottie = "5.2.0"
-compose-navigation = "2.7.7"
+compose-navigation = "2.8.0-alpha06"
 constraintlayout = "2.1.4"
 constraintlayout-compose = "1.0.1"
 coil = "2.6.0"
@@ -26,11 +26,11 @@ hilt = "1.2.0"
 junit = "4.13.2"
 junit-android-runner = "1.1.5"
 ktlint-wrapper-plugin = "11.6.1"
-kotlin = "1.9.22"
+kotlin = "1.9.23"
 kotlinx-coroutines = "1.7.3"
 kotlinx-serialization-json = "1.6.3"
 kotest = "5.6.2"
-ksp = "1.9.22-1.0.17"
+ksp = "1.9.23-1.0.19"
 ktlint_compose_rules = "0.3.3"
 lifecycle = "2.7.0"
 material-icons = "1.6.5"
@@ -132,6 +132,7 @@ sqlcipher-android = { module = "net.zetetic:sqlcipher-android", version.ref = "s
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+coil-gif = { module = "io.coil-kt:coil-gif", version.ref = "coil" }
 telephoto-zoomable-image = { module = "me.saket.telephoto:zoomable-image", version.ref = "telephoto" }
 telephoto-zoomable-image-coil = { module = "me.saket.telephoto:zoomable-image-coil", version.ref = "telephoto" }
 media3-exoplayer-core = { module = "androidx.media3:media3-exoplayer", version.ref = "media3-exoplayer" }
