--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,22 @@
 [versions]
 accompanist = "0.34.0"
-activity-compose = "1.8.2"
-activity-ktx = "1.9.0-rc01"
+activity-compose = "1.9.0"
+activity-ktx = "1.9.0"
 agp = "8.3.2"
 appcompat = "1.6.1"
 bitcoinj-core = "0.16.2"
-camera = "1.3.2"
-compose-bom = "2024.04.00"
+camera = "1.3.3"
+compose-bom = "2024.04.01"
 compose-lottie = "5.2.0"
-compose-navigation = "2.8.0-alpha06"
+compose-navigation = "2.8.0-alpha07"
 constraintlayout = "2.1.4"
 constraintlayout-compose = "1.0.1"
 coil = "2.6.0"
-core-ktx = "1.12.0"
+core-ktx = "1.13.0"
 core-splashscreen = "1.0.1"
 core-testing = "2.2.0"
 dagger = "2.50"
-datastore = "1.1.0-rc01"
+datastore = "1.1.0"
 detekt = "1.23.3"
 emoji2-emojipicker = "1.4.0"
 espresso-core = "3.5.1"
@@ -27,19 +27,19 @@ junit = "4.13.2"
 junit-android-runner = "1.1.5"
 ktlint-wrapper-plugin = "11.6.1"
 kotlin = "1.9.23"
-kotlinx-coroutines = "1.7.3"
+kotlinx-coroutines = "1.8.0"
 kotlinx-serialization-json = "1.6.3"
 kotest = "5.6.2"
 ksp = "1.9.23-1.0.19"
 ktlint_compose_rules = "0.3.3"
 lifecycle = "2.7.0"
-material-icons = "1.6.5"
+material-icons = "1.6.6"
 media3-exoplayer = "1.3.1"
 mockk = "1.13.10"
 okhttp = "4.12.0"
 paging = "3.2.1"
 play-publishing = "3.8.4"
-play-billing = "6.2.0"
+play-billing = "6.2.1"
 qrcode-generator = "1.6.2"
 retrofit = "2.11.0"
 roboelectric = "4.10.3"
