Disable TopLevelPropertyNaming because complains on Composable constants

--- a/detekt.yml
+++ b/detekt.yml
@@ -2,6 +2,9 @@ naming:
   FunctionNaming:
     ignoreAnnotated: ['Composable']
 
+  TopLevelPropertyNaming:
+    active: false
+
 style:
   MagicNumber:
     ignorePropertyDeclaration: true
