--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,8 @@ insert_final_newline = true
 end_of_line = lf
 max_line_length = 120
 
+ktlint_standard_property-naming = disabled
+
 ij_kotlin_allow_trailing_comma = true
 ij_kotlin_allow_trailing_comma_on_call_site = true
 ij_kotlin_imports_layout = *
