--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,13 +2,13 @@
 accompanist = "0.34.0"
 activity-compose = "1.9.0"
 activity-ktx = "1.9.0"
-agp = "8.4.0"
+agp = "8.4.1"
 appcompat = "1.6.1"
 bitcoinj-core = "0.16.2"
 camera = "1.3.3"
 compose-bom = "2024.05.00"
 compose-lottie = "6.4.0"
-compose-navigation = "2.8.0-alpha08"
+compose-navigation = "2.8.0-beta01"
 constraintlayout = "2.1.4"
 constraintlayout-compose = "1.0.1"
 coil = "2.6.0"
@@ -32,14 +32,14 @@ kotlinx-serialization-json = "1.6.3"
 kotest = "5.6.2"
 ksp = "1.9.23-1.0.19"
 ktlint_compose_rules = "0.3.17"
-lifecycle = "2.7.0"
+lifecycle = "2.8.0"
 material-icons = "1.6.7"
 media3-exoplayer = "1.3.1"
 mockk = "1.13.10"
 okhttp = "4.12.0"
-paging = "3.2.1"
+paging = "3.3.0"
 play-publishing = "3.8.4"
-play-billing = "6.2.1"
+play-billing = "7.0.0"
 qrcode-generator = "1.6.2"
 retrofit = "2.11.0"
 roboelectric = "4.12.1"
