--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,11 +26,11 @@ hilt = "1.2.0"
 junit = "4.13.2"
 junit-android-runner = "1.2.1"
 ktlint-wrapper-plugin = "11.6.1"
-kotlin = "1.9.23"
+kotlin = "2.0.0"
 kotlinx-coroutines = "1.8.0"
 kotlinx-serialization-json = "1.6.3"
 kotest = "5.6.2"
-ksp = "1.9.23-1.0.19"
+ksp = "2.0.0-1.0.22"
 ktlint_compose_rules = "0.3.17"
 lifecycle = "2.8.2"
 material-icons = "1.6.8"
@@ -186,3 +186,4 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 play-publishing = { id = "com.github.triplet.play", version.ref = "play-publishing" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 ktlint-wrapper-plugin = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint-wrapper-plugin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
