--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ camera = "1.3.4"
 compose-bom = "2024.06.00"
 compose-lottie = "6.4.0"
 compose-navigation = "2.8.0-beta05"
+compose-richtext = "1.0.0-alpha01"
 constraintlayout = "2.1.4"
 constraintlayout-compose = "1.0.1"
 coil = "2.6.0"
@@ -54,9 +55,11 @@ sqlcipher-android = "4.6.0"
 telephoto = "0.7.1"
 timber = "5.0.1"
 url-detector = "0.1.23"
+webkit = "1.11.0"
 
 [libraries]
 # Core libs
+androidx-webkit = { module = "androidx.webkit:webkit", version.ref = "webkit" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "core-splashscreen" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
@@ -87,6 +90,11 @@ compose-constraintlayout = { module = "androidx.constraintlayout:constraintlayou
 androidx-emoji2-emojipicker = { group = "androidx.emoji2", name = "emoji2-emojipicker", version.ref = "emoji2-emojipicker" }
 flippable = { module = "com.wajahatkarim:flippable", version.ref = "flippable" }
 reorderable = { module = "sh.calvin.reorderable:reorderable", version.ref = "reorderable" }
+
+richtext-commonmark = { module = "com.halilibo.compose-richtext:richtext-commonmark", version.ref = "compose-richtext" }
+richtext-markdown = { module = "com.halilibo.compose-richtext:richtext-markdown", version.ref = "compose-richtext" }
+richtext-ui = { module = "com.halilibo.compose-richtext:richtext-ui", version.ref = "compose-richtext" }
+richtext-ui-material3 = { module = "com.halilibo.compose-richtext:richtext-ui-material3", version.ref = "compose-richtext" }
 
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "compose-lottie" }
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "compose-navigation" }
