--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,9 +6,9 @@ agp = "8.5.2"
 appcompat = "1.7.0"
 bitcoinj-core = "0.16.2"
 camera = "1.3.4"
-compose-bom = "2024.06.00"
+compose-bom = "2024.08.00"
 compose-lottie = "6.4.0"
-compose-navigation = "2.8.0-beta07"
+compose-navigation = "2.8.0-rc01"
 compose-richtext = "1.0.0-alpha01"
 constraintlayout = "2.1.4"
 constraintlayout-compose = "1.0.1"
@@ -27,18 +27,19 @@ hilt = "1.2.0"
 junit = "4.13.2"
 junit-android-runner = "1.2.1"
 ktlint-wrapper-plugin = "12.1.1"
-kotlin = "2.0.0"
+kotlin = "2.0.20"
 kotlinx-coroutines = "1.8.1"
 kotlinx-serialization-json = "1.7.1"
 kotest = "5.9.0"
-ksp = "2.0.0-1.0.22"
+ksp = "2.0.20-1.0.24"
 ktlint_compose_rules = "0.3.17"
 lifecycle = "2.8.4"
 material-icons = "1.6.8"
-media3-exoplayer = "1.4.0"
+media3-exoplayer = "1.4.1"
 mockk = "1.13.10"
 okhttp = "4.12.0"
 paging = "3.3.2"
+placeholder = "2.0.0"
 play-publishing = "3.8.4"
 play-billing = "7.0.0"
 qrcode-generator = "1.6.2"
@@ -83,7 +84,8 @@ compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-mani
 compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 compose-animation = { group = "androidx.compose.animation", name = "animation" }
 compose-material3 = { group = "androidx.compose.material3", name = "material3" }
-compose-placeholdermaterial = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanist" }
+compose-placeholder-foundation = { module = "io.github.fornewid:placeholder-foundation", version.ref = "placeholder" }
+compose-placeholder-material3 = { module = "io.github.fornewid:placeholder-material3", version.ref = "placeholder" }
 constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
 compose-constraintlayout = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayout-compose" }
 
