Migrate to Compose 1.7; Disable pull to refresh across the app;

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,14 @@
 [versions]
 accompanist = "0.34.0"
-activity-compose = "1.9.1"
-activity-ktx = "1.9.1"
+activity-compose = "1.9.2"
+activity-ktx = "1.9.2"
 agp = "8.6.0"
 appcompat = "1.7.0"
 bitcoinj-core = "0.16.2"
 camera = "1.3.4"
-compose-bom = "2024.08.00"
+compose-bom = "2024.09.01"
 compose-lottie = "6.4.0"
-compose-navigation = "2.8.0-rc01"
+compose-navigation = "2.8.0"
 compose-richtext = "1.0.0-alpha01"
 constraintlayout = "2.1.4"
 constraintlayout-compose = "1.0.1"
@@ -19,7 +19,7 @@ core-testing = "2.2.0"
 dagger = "2.51"
 datastore = "1.1.1"
 detekt = "1.23.6"
-emoji2-emojipicker = "1.4.0"
+emoji2-emojipicker = "1.5.0"
 espresso-core = "3.6.1"
 flippable = "1.5.4"
 guava = "33.0.0-android"
@@ -33,8 +33,8 @@ kotlinx-serialization-json = "1.7.1"
 kotest = "5.9.0"
 ksp = "2.0.20-1.0.24"
 ktlint_compose_rules = "0.3.17"
-lifecycle = "2.8.4"
-material-icons = "1.6.8"
+lifecycle = "2.8.5"
+material-icons = "1.7.1"
 media3-exoplayer = "1.4.1"
 mockk = "1.13.10"
 okhttp = "4.12.0"
