--- a/.github/workflows/PR-workflow.yml
+++ b/.github/workflows/PR-workflow.yml
@@ -7,6 +7,11 @@ on:
 jobs:
   build:
     runs-on: macos-latest
+
+    strategy:
+      matrix:
+        flavor: [ Aosp, Google ]
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
