--- a/.github/workflows/PR-workflow.yml
+++ b/.github/workflows/PR-workflow.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        flavor: [ Aosp, Google ]
+        flavor: [ Aosp ]
 
     steps:
     - name: Checkout code
@@ -21,7 +21,14 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: gradle
+
+    - name: Cache gradle
+      uses: actions/cache@v4
+      with:
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
 
     - name: Check detekt
       run: ./gradlew detekt
