--- a/.github/workflows/PR-workflow.yml
+++ b/.github/workflows/PR-workflow.yml
@@ -10,14 +10,14 @@ jobs:
 
     strategy:
       matrix:
-        flavor: [ Aosp ]
+        flavor: [ Aosp, Google ]
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
